@@ -287,7 +287,7 @@ class CAutomation(Automation):
                 if strip_folders>0:
                     fsplit = f.split('/') # Zip standard on all OS
                     f = '/'.join(fsplit[strip_folders:])
-                
+
                 file_path = os.path.join(path, f)
 
                 if f.endswith('/'):
@@ -338,9 +338,9 @@ class CAutomation(Automation):
 
         # 3.9.6 vs 3.9
         # 3.9 vs 3.9.6
-	
-        i_version1 = [int(v) if isinstance(v, int) else v for v in l_version1]
-        i_version2 = [int(v) if isinstance(v, int) else v for v in l_version2]
+
+        i_version1 = [int(v) if v.isdigit() else v for v in l_version1]
+        i_version2 = [int(v) if v.isdigit() else v for v in l_version2]
 
         comparison = 0
 
